--- a/d42ker-github.css
+++ b/d42ker-github.css
@@ -35,8 +35,7 @@ html {
 }
 
 body {
-  font-family: "IBM Plex Sans","Microsoft YaHei", "微软雅黑", "Open Sans", "Clear Sans", "Helvetica Neue",
-    Helvetica, Arial, sans-serif;
+  font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, 'Segoe UI Emoji', sans-serif;
   color: #d0d0d0;
   background-color: var(--bg-color);
   line-height: 1.75;
